# NativeGhost

./: .gitignore  GENERATING_ASSETS.md  MANUAL_ANALYSIS_PLAN_1YEAR.md  PHASE_10_COMPLETE.md  PHASE_2_INDEX.md  PHASE_2_START.md  PHASE_2_TOOLS_READY.md  PHASE_3_STATUS.md  PHASE_4_COMPLETE_ANALYSIS.md  PHASE_4_PRELIMINARY_ANALYSIS.md  PHASE_5_ANALYSIS.md  PHASE_6_ANALYSIS.md  PHASE_7_COMPLETE.md  PHASE_8_COMPLETE.md  PHASE_8_INITIALIZATION.md  PHASE_8_USAGE_GUIDE.md  PHASE_9_COMPLETE.md  PHASE_9_PROGRESS.md  README.md  START_PHASE_2.md  imports_map.txt  mlbb_live_data_endpoints.json  syms.txt
arm64_disassembler/: Cargo.toml
docs/: API_ENDPOINTS_COMPLETE.md  API_ENDPOINTS_FOUND.md  API_EXTRACTION_RESULTS.md  API_SCHEMA_VALIDATED.md  APPROACH_B_ANALYSIS.md  COMPLETE_PACKAGE.md  EMULATOR_TEST_RESULTS.md  GAME_TELEMETRY_DISCOVERY.md  HANDOVER.md  IL2CPP_IMPLEMENTATION_ROADMAP.md  IL2CPP_STATUS.md  INDEX.md  LIVESTREAM_API_ANALYSIS.md  LIVESTREAM_CAPTURE_PLAN.md  LIVESTREAM_DISCOVERY_FINAL_REPORT.md  NETWORK_CAPTURE_OPTIONS.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_COMPLETE.md  PHASE3_ANALYSIS.md  PHASE3_COMPLETE.md  QUICK_START.md  README_DOCUMENTATION.md  STATUS_REPORT.md  STREAMER_LIST_ASSESSMENT.md  STREAMER_LIST_FINAL_REPORT.md  STREAMER_LIST_INDEX.md  STREAMER_LIST_NAVIGATION_MAP.md  STREAMER_LIST_QUICK_ACTION.md  STREAMER_LIST_REPORT_SUMMARY.md  TELEMETRY_DISCOVERY.md  ZEUS_API_FINDINGS.md  arm64_analysis_report.md  mlbb_api_findings.md
emulator_rust/: Cargo.toml  simulated_live_list.json
scripts/: analyze_entropy.py  analyze_so.py  analyze_so_raw.py  check_symbols.py  decrypt_experiments.py  disasm.py  disasm_crash.py  disasm_xrefs.py  dump_loader.py  dump_symbols.py  emulate_jni.py  extract_urls.py  (+24 more)
(+1 files in other folders)
